<resources>
    <string name="app_name">Personal Organizer</string>

    <string name="menu_list">List</string>
    <string name="menu_birthday">Birthday</string>
    <string name="menu_note">Note</string>

    <string name="pager_month">Calendar</string>
    <string name="pager_week">Week</string>
    <string name="pager_day">Day</string>

    <string name="default_month_title">Month, Year</string>
    <string name="default_record_title">Record title</string>
    <string name="default_list_description">Description</string>
    <string name="default_birthday_description">Birthday</string>


    <string name="hint_birthday_name">Name</string>
    <string name="hint_birthday_date">Date</string>
    <string name="hint_birthday_comment">Comment</string>
    <string name="hint_birthday_email">Email</string>
    <string name="hint_birthday_phone">Phone</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <!--<string name="default_note_comment_linear_et">=@{viewModel.textNote != `textNote` ? viewModel.textNote : null}</string>-->


</resources>
